[package]
name = "fdbprom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
foundationdb = { version = "0.9.1", features = ["embedded-fdb-include", "fdb-7_3"] }
futures = "0.3.31"
json = "0.12.4"
lazy_static = "1.5.0"
prometheus-client = "0.22.3"
tokio = { version = "1.41.1", features =["full"] }
actix-rt = "2.5"

